<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.montsuqi.monsiaj</groupId>
    <artifactId>monsiaj</artifactId>
    <packaging>jar</packaging>
    <version>2.0.31</version>
    <name>monsiaj</name>
    <url>https://github.com/montsuqi/monsiaj</url>
    <description>montsuqi panda client for java</description>
    <organization>
        <name>montsuqi.org</name>
    </organization>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <name>Maven Plugin Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <profiles>
        <profile>
            <id>mac</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <java.jlink>/usr/bin/jlink</java.jlink>
                <java.jpackage>/usr/bin/jpackage</java.jpackage>
                <java.jpackage.icon>jma-logo.icns</java.jpackage.icon>
            </properties>
        </profile>
        <profile>
            <id>win</id>
            <properties>
                <java.jlink>${java.home}/bin/jlink.exe</java.jlink>
                <java.jpackage>${java.home}/bin/jpackage.exe</java.jpackage>
                <java.jpackage.icon>jma-logo.ico</java.jpackage.icon>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            <addClasspath>true</addClasspath>
                            <mainClass>org.montsuqi.monsiaj.client.Launcher</mainClass>
                        </manifest>
                        <manifestEntries>
                            <permissions>all-permissions</permissions>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <!-- make bin package -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>make-bin-zip</id>
                        <configuration>
                            <finalName>monsiaj-${project.version}</finalName>
                            <descriptors>
                                <descriptor>src/assembly/jar-with-dependencies.xml</descriptor>
                                <descriptor>src/assembly/bin.xml</descriptor>
                                <descriptor>src/assembly/src.xml</descriptor>
                            </descriptors>
                            <archive>
                                <manifest>
                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                    <mainClass>org.montsuqi.monsiaj.client.Launcher</mainClass>
                                </manifest>
                                <manifestEntries>
                                    <permissions>all-permissions</permissions>
                                </manifestEntries>
                            </archive>
                        </configuration>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>make-loader</id>
                        <configuration>
                            <finalName>monsiaj-loader-${project.version}</finalName>
                            <descriptors>
                                <descriptor>src/assembly/loader.xml</descriptor>
                            </descriptors>
                            <archive>
                                <manifest>
                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                    <mainClass>org.montsuqi.monsiaj.loader.Loader</mainClass>
                                </manifest>
                                <manifestEntries>
                                    <permissions>all-permissions</permissions>
                                </manifestEntries>
                            </archive>
                        </configuration>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- rename distribution archive  -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <!-- make jre antrun:run@jre -->
                    <execution>
                        <id>jre</id>
                        <configuration>
                            <tasks>
                                <echo>making jre using jlink</echo>
                                <property name="jredir" value="${basedir}/appRuntimeImage/jre" />
                                <delete dir="${jredir}" />
                                <exec executable="${java.jlink}">
                                    <arg value="--no-header-files" />
                                    <arg value="--no-man-pages" />
                                    <arg value="--strip-debug" />
                                    <arg value="--compress=2" />
                                    <arg line="--add-modules java.base,java.desktop,java.logging,java.naming,java.prefs,java.management,java.xml,jdk.unsupported" />
                                    <arg line="--output ${jredir}" />
                                </exec>
                            </tasks>
                        </configuration>
                    </execution>

                    <execution>
                        <id>rename-dist-archives</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <echo>mkdir out</echo>
                                <delete dir="${project.build.directory}/out"/>
                                <mkdir dir="${project.build.directory}/out"/>
                                <mkdir dir="${project.build.directory}/tmp"/>

                                <echo>make macintosh app</echo>
                                <copy file="${project.build.directory}/monsiaj-${project.version}-all.jar" todir="${project.build.directory}/tmp" />
                                <exec executable="${java.jpackage}">
                                    <arg line="-n JMA-Receipt" />
                                    <arg line="--type app-image" />
                                    <arg line="-i ${project.build.directory}/tmp" />
                                    <arg line="-d ${project.build.directory}/out" />
                                    <arg line="--main-jar ${project.build.directory}/monsiaj-${project.version}-all.jar" />
                                    <arg line="--icon ${basedir}/resources/${java.jpackage.icon}" />
                                    <arg line="--runtime-image ${basedir}/appRuntimeImage/jre" />
                                </exec>
                                <delete dir="${project.build.directory}/tmp"/>

                                <echo>rename-dist-archives</echo>
                                <move file="${project.build.directory}/monsiaj-${project.version}-bin.zip" tofile="${project.build.directory}/out/monsiaj-bin-${project.version}.zip" />
                                <move file="${project.build.directory}/monsiaj-${project.version}-src.zip" tofile="${project.build.directory}/out/monsiaj-src-${project.version}.zip" />
                                <move file="${project.build.directory}/monsiaj-${project.version}-all.jar" todir="${project.build.directory}/out" />
                                <move file="${project.build.directory}/monsiaj-loader-${project.version}-all.jar" todir="${project.build.directory}/out" />
                                <checksum algorithm="SHA-256" fileext=".sha256">
                                    <fileset dir="${project.build.directory}/out/">
                                        <include name="*"/>
                                    </fileset>
                                </checksum>
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.tyrus.bundles</groupId>
            <artifactId>tyrus-standalone-client</artifactId>
            <version>1.13.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20170516</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.sf.squirrel-sql.thirdparty-non-maven/nimrodlf -->
        <dependency>
            <groupId>net.sf.squirrel-sql.thirdparty-non-maven</groupId>
            <artifactId>nimrodlf</artifactId>
            <version>1.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.sf.squirrel-sql.thirdparty-non-maven/ilf-gpl -->
        <dependency>
            <groupId>net.sf.squirrel-sql.thirdparty-non-maven</groupId>
            <artifactId>ilf-gpl</artifactId>
            <version>1.6.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.24</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.0</version>
        </dependency>
    </dependencies>
</project>
